Add dashboard for housing as a percentage of AMI.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,42 @@
-interactive-map/.idea*
+/interactive-map/.idea*
 .ipynb_checkpoints*
 !/.gitignore
-sandbox-singlepage/data/*.csv
-sandbox-singelpage/data/shapefiles*
+/sandbox-singlepage/data/*.csv
+/sandbox-singelpage/data/shapefiles*
 interactive-map/.idea*
 archive*
 .idea*
-interactive-map/__pycache__*
-sandbox-singlepage/__pycache__*
-interactive-map/data*
-sandbox-singlepage/.ebextensions*
-sandbox-singlepage/cache*
-interactive-map/cache*
-click-test/data*
+/interactive-map/__pycache__*
+/sandbox-singlepage/__pycache__*
+/interactive-map/data*
+/sandbox-singlepage/.ebextensions*
+/sandbox-singlepage/cache*
+/interactive-map/cache*
+/click-test/data*
 *nan-check.csv
 /sandbox-singlepage/data/json/
 /sandbox-singlepage/data/network/
 /sandbox-singlepage/data/maps/
+/housing_pct_ami/cache/
+/housing_pct_ami/data/totalunits-tracts.csv
+/housing_pct_ami/data/citynames.csv
+/housing_pct_ami/data/combo_df.csv
+/housing_pct_ami/data/combo_gdf.csv
+/housing_pct_ami/data/df.csv
+/housing_pct_ami/data/df_combo.csv
+/housing_pct_ami/data/gdf.csv
+/housing_pct_ami/data/housing-costs-and-ami.csv
+/housing_pct_ami/data/mtbaker_station_df.csv
+/housing_pct_ami/data/mtbaker_station_gdf.csv
+/housing_pct_ami/data/othello_station_df.csv
+/housing_pct_ami/data/othello_station_gdf.csv
+/housing_pct_ami/data/race-data.csv
+/housing_pct_ami/data/rainier_beach_df.csv
+/housing_pct_ami/data/rainier_beach_gdf.csv
+/housing_pct_ami/data/seattle_census_tract_and_blockgroup.csv
+/housing_pct_ami/data/seattle_census_tracts.csv
+/housing_pct_ami/data/totalpop-tract.csv
+/housing_pct_ami/data/wa_king_census_block_groups_distances.csv
+/housing_pct_ami/data/wallingford_df.csv
+/housing_pct_ami/data/wallingford_gdf.csv
+/housing_pct_ami/data/washingtongeo_dist.csv
