--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ archive*
 /housing_pct_ami/data/housing-costs-and-ami-suppl.csv
 /housing_pct_ami/data/housing_details.csv
 /housing_pct_ami/data/affordable_housing_units-allyears-tract.csv
+*/__pychache__/
